Update dependencies to latest versions.